--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ko">
 <head>
 <meta charset="utf-8">
-<title>Exmaru HTML/CSS Style Guide</title>
+<title>Metanury HTML/CSS Style Guide</title>
 <link rel="stylesheet" href="guide.css">
-<link rel="shortcut icon" href="https://www.google.com/favicon.ico">
+<link rel="shortcut icon" href="">
 </head>
 <body>
 <div id="content">
-<h1>Exmaru HTML/CSS Style Guide</h1>
+<h1>Metanury HTML/CSS Style Guide</h1>
 <h2 id="Background">1 목적</h2>
 
 <p>이 문서는 HTML 및 CSS에 대한 형식 및 스타일 규칙을 정의합니다. 
@@ -71,6 +71,7 @@ SCSS 파일을 포함하여 HTML 및 CSS를 사용하는 원시 작업 파일에
 <p>소문자만 사용하십시오.</p>
 
 <p>모든 코드는 소문자여야 합니다. 이것은 HTML 요소 이름, 속성, 속성 값, CSS 선택기, 속성 및 속성 값(문자열 제외)에 적용됩니다.</p>
+<p>단, 색상코드는 대문자로 합니다.</p>
 
 <pre><code class="language-html prettyprint badcode">&lt;!-- 권장하지않음 --&gt;
 &lt;A HREF="/"&gt;Home&lt;/A&gt;
@@ -81,11 +82,11 @@ SCSS 파일을 포함하여 HTML 및 CSS를 사용하는 원시 작업 파일에
 </code></pre>
 
 <pre><code class="language-css prettyprint badcode">/* 권장하지않음 */
-color: #E5E5E5;
+color: #e5e5e5;
 </code></pre>
 
 <pre><code class="language-css prettyprint">/* 권장 */
-color: #e5e5e5;
+color: #E5E5E5;
 </code></pre>
 
 <h4 id="Trailing_Whitespace">2.2.3 후행 공백</h4>
